fix(tests): EnvironmentsServiceTest: some tests are temporarily turned off, assertions are improved. Code is cleansed.